--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,46 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "mat-file-input": {
+      "projectType": "library",
+      "root": "projects/mat-file-input",
+      "sourceRoot": "projects/mat-file-input/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/mat-file-input/tsconfig.lib.json",
+            "project": "projects/mat-file-input/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/mat-file-input/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/mat-file-input/src/test.ts",
+            "tsConfig": "projects/mat-file-input/tsconfig.spec.json",
+            "karmaConfig": "projects/mat-file-input/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/mat-file-input/tsconfig.lib.json",
+              "projects/mat-file-input/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }},
+  "defaultProject": "mat-file-input"
 }
