--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:once": "ng test mat-file-input --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
