--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ stages:
 
 before_install:
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb star
+  - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
 
 install:
