--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,10 +26,9 @@ jobs:
 
       - run: sudo apt-get update
       - run: sudo apt-get install -y libgbm-dev
-      - run: sudo apt-get install -y xvfb
-      - run: export DISPLAY=:99.0
-      - run: sh -e /etc/init.d/xvfb start
-      - run: export CHROME_BIN=chromium-browser
+      - run: "sudo chown root /opt/google/chrome/chrome-sandbox"
+      - run: "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
+      - run: npm install coveralls
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
