feat: Set package as public and add version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mat-file-input",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~10.0.4",
     "@angular/cdk": "^10.2.1",
